--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -39,7 +39,7 @@ android {
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "com.example.flutter_test_app"
-        minSdkVersion 16
+        minSdkVersion 18
         targetSdkVersion 30
         multiDexEnabled true
         versionCode flutterVersionCode.toInteger()
@@ -71,6 +71,7 @@ dependencies {
     implementation "com.mesibo.api:ui:1.2.31"
     implementation "com.mesibo.api:calls:1.2.31"
     implementation 'com.google.firebase:firebase-auth:19.2.0'
+    implementation "androidx.browser:browser:1.3.0"
     //For Firebase Authentication Service
     implementation 'com.google.firebase:firebase-firestore:21.3.1'
     //For Firebase Firestore Database Service
