--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,9 +24,18 @@ dependencies:
   flutter:
     sdk: flutter
   splashscreen:
-  pin_code_fields: ^6.1.0
-  firebase_core: ^1.0.0
-  firebase_auth: ^1.0.0
+  provider: ^5.0.0
+  permission_handler: ^7.1.0
+  firebase_core: ^1.1.1
+  firebase_auth: ^1.1.4
+  sms_autofill: ^2.0.0
+  pin_code_fields: ^7.1.0
+  shared_preferences: ^2.0.5
+  path_provider: ^2.0.1
+  flutter_spinkit: ^5.0.0
+
+
+  
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -49,6 +58,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
+    - assets/icons/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
@@ -66,12 +76,14 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+    - family: Roboto
+      fonts:
+        - asset: assets/fonts/Roboto-Regular.ttf
+        - asset: assets/fonts/Roboto-Medium.ttf
+          weight: 300
+        - asset: assets/fonts/Roboto-Bold.ttf
+          weight: 700
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
